initial checkin - api now allows basic create an fetch projects for a user.
