# source/main/generated/swagger_server/controllers/project_controller.py
@@ -1,0 +1,60 @@
+import connexion
+import six
+from swagger_server.extensions.mongo_interface import MongoInterface
+from swagger_server.models.project import Project  # noqa: E501
+from swagger_server import util
+
+
+def add_project(body):  # noqa: E501
+    """create a project
+
+    create a project # noqa: E501
+
+    :param body: 
+    :type body: dict | bytes
+
+    :rtype: None
+    """
+    if connexion.request.is_json:
+        body = Project.from_dict(connexion.request.get_json())  # noqa: E501
+
+    body.profile_id=connexion.request.authorization["user_profile"]
+    print("create project for " + body.profile_id + ":" + str(body))
+    m_interface = MongoInterface()
+    response = m_interface.create_project(body.to_dict())
+    return_project = Project.from_dict(response)
+
+    # TODO - update swagger spec to add return object.
+    return return_project
+
+
+def get_project(project_id):  # noqa: E501
+    """get a project by id
+
+    get that project # noqa: E501
+
+    :param project_id: ID of project to return
+    :type project_id: str
+
+    :rtype: Project
+    """
+    return 'do some magic!'
+
+
+def get_session_projects():  # noqa: E501
+    """get a project based on authorized session
+
+     # noqa: E501
+
+
+    :rtype: Project
+    """
+
+    profile_id = connexion.request.authorization["user_profile"]
+    m_interface = MongoInterface()
+    res_count, results = m_interface.get_projects(profile_id)
+    print ("found: " + str(res_count))
+    resp_list = list()
+    for res in results:
+        resp_list.append(Project.from_dict(res))
+    return resp_list
